chore: 修复CI中go build路径错误

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
           go-version: ${{ matrix.go }}
 
       - name: Build
-        run: go build cmd/sf
+        run: go build ./cmd/sf
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
